--- a/Step1/CMakeLists.txt
+++ b/Step1/CMakeLists.txt
@@ -1,6 +1,9 @@
+
 # TODO 1: Set the minimum required version of CMake to be 3.10
+cmake_minimum_required(VERSION 3.31)
 
 # TODO 2: Create a project named Tutorial
+project(Tutorial)
 
 # TODO 7: Set the project version number as 1.0 in the above project command
 
@@ -12,5 +15,10 @@
 
 # TODO 3: Add an executable called Tutorial to the project
 # Hint: Be sure to specify the source file as tutorial.cxx
+add_executable(tutorial tutorial.cxx)
 
 # TODO 9: Use target_include_directories to include ${PROJECT_BINARY_DIR}
+
+# set(CMAKE_C_COMPILER "S:/kanomKhim/winlibs/bin/gcc.exe")
+# set(CMAKE_CXX_COMPILER "S:/kanomKhim/winlibs/bin/g++.exe")
+# mkdir build & cd build & cmake -G "MinGW Makefiles" ..
