--- a/Step1/CMakeLists.txt
+++ b/Step1/CMakeLists.txt
@@ -3,7 +3,7 @@
 cmake_minimum_required(VERSION 3.31)
 
 # TODO 2: Create a project named Tutorial
-project(Tutorial)
+# project(Tutorial)
 
 # TODO 7: Set the project version number as 1.0 in the above project command
 project(Tutorial VERSION 1.0)
