--- a/Step3/MathFunctions/CMakeLists.txt
+++ b/Step3/MathFunctions/CMakeLists.txt
@@ -19,10 +19,10 @@ if (USE_MYMATH)
 
   # TODO 6: Link SqrtLibrary to tutorial_compiler_flags
 
-  # target_link_libraries(MathFunctions PRIVATE SqrtLibrary)
+  target_link_libraries(MathFunctions PRIVATE SqrtLibrary)
 
   target_link_libraries(SqrtLibrary PUBLIC tutorial_compiler_flags)
-  target_link_libraries(MathFunctions PUBLIC tutorial_compiler_flags)
+  # target_link_libraries(MathFunctions PUBLIC tutorial_compiler_flags)
 
 endif()
 
